[package]
name = "linkkivahti"
version = "0.1.0"
edition = "2021"
authors = ["Kirill Pimenov <kirill@kalapaja.fi>"]
license = "GPL-3.0-or-later"
description = "A Cloudflare Worker that monitors the integrity of linked resources using Subresource Integrity (SRI) checks."
repository = "https://github.com/kalapaja/linkkivahti"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }
static-toml = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
base64 = "0.21"
sha2 = "0.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
rand = "0.9"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link Time Optimization
codegen-units = 1      # Better optimization
strip = true           # Remove debug symbols
panic = "abort"        # Smaller panic handler
